# frontier-hero

./: main.py  pyproject.toml
frontier_hero/: constants.py  item.py  level.py  player.py  sprite.py  tile_cache.py
resources/: house.map  level.map  midgaard.map
resources/midgaard/: forest.map  house1.map  town.map
