[tool.poetry]
name = "frontier-hero"
version = "0.1.0"
description = ""
authors = ["Dan Munro <dan@danmunro.com>"]
readme = "README.md"
packages = [{include = "frontier_hero"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
